--- a/amenities.html
+++ b/amenities.html
@@ -7,165 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Eagle Creek Lodge</title>
     <link rel="icon" href="img/favicon.png" type="image/png">
-
     <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="vendors/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="vendors/linericon/style.css">
     <link rel="stylesheet" href="vendors/owl-carousel/owl.theme.default.min.css">
     <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
-
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
+    <link rel="stylesheet" href="css/styleCustom.css">
     <link rel="stylesheet" href="css/normalize.css">
     <script src="https://www.google.com/recaptcha/api.js"></script>
 
-
-    <style>
-        html,
-        body {
-            overflow-x: hidden;
-        }
-
-        html {
-            overflow-y: scroll;
-        }
-
-        .navCustom {
-            background-color: #b59a77;
-
-        }
-
-        .bodyCustom {
-            background-color: #dbc4a6;
-            padding-top: 2em;
-        }
-
-        .fontCustom {
-            font-family: "Zilla Slab", serif !important;
-        }
-
-        .quotes {
-            font-family: "Zilla Slab", serif !important;
-            font-size: 28px;
-            color: #000000;
-        }
-
-        .left {
-            text-align: left;
-        }
-
-        .right {
-            text-align: right;
-        }
-
-        .center {
-            text-align: center;
-        }
-
-        .pad-right1 {
-            padding-right: 4em;
-        }
-
-        .pad-bot1 {
-            padding-bottom: 0.5em;
-        }
-
-        .brown1 {
-            color: #4c3216;
-        }
-
-        .titleA {
-            font-size: 32px;
-        }
-
-        .quotesMod {
-            font-family: "Zilla Slab", serif !important;
-            text-align: center;
-            font-size: 28px;
-            color: #000000;
-            padding-top: 2em;
-            /*padding-bottom: 2em;*/
-        }
-
-        .spacer {
-            padding-top: 3em;
-        }
-
-        @media (max-width: 991px) {
-            nav.navbar {
-                background: lightgray !important;
-            }
-        }
-
-        #header_placeholder {
-            height: 70px;
-            width: 100%;
-            display: none;
-        }
-
-        .borders {
-            border: 0.3em solid #FFFFFF;
-            border-radius: 0.3em;
-            background-color: #FFFFFF;
-        }
-
-        .colWrapper {
-            margin-bottom: 0.5em;
-            /*
-            text-align: left;
-            */
-        }
-
-        .textCap {
-            font-size: 26px;
-            overflow: hidden;
-            white-space: nowrap;
-        }
-
-        .marginTop {
-            margin-top: 0.5em;
-        }
-
-        .rotateimg180 {
-            -webkit-transform: rotate(180deg);
-            -moz-transform: rotate(180deg);
-            -ms-transform: rotate(180deg);
-            -o-transform: rotate(180deg);
-            transform: rotate(180deg);
-        }
-
-        .img-responsivex {
-            height: auto;
-            width: auto;
-            max-height: 77px;
-            max-width: 255px;
-        }
-
-        .captchaWrap {
-            padding-top: 2em;
-        }
-
-        .icon-size {
-            height: 13px;
-            width: 13px;
-        }
-
-        .image_off,
-        #home:hover .image_on {
-            display: none
-        }
-
-        .image_on,
-        #home:hover .image_off {
-            display: block
-        }
-
-        .footer-icon {
-            height: 16px;
-            width: 16px;
-        }
-    </style>
 </head>
 
 <body>
@@ -229,7 +82,7 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-12 center titleA quotes">
+                <div class="col-lg-12 center titleA quotesAm">
                     <strong>Lodge Amenities</strong>
                 </div>
             </div>
@@ -243,44 +96,44 @@
             <div class="container">
 
                 <div class="row">
-                    <div class="offset-md-2 col-md-4 marginTop quotes">
+                    <div class="offset-md-2 col-md-4 marginTop quotesAm">
                         <img class="borders" src="img\amenitiest2\icons8-washing-machine-50.png">
                         <span class="textCap">Washer and Dryer</span>
                     </div>
-                    <div class="offset-md-2 col-md-4 marginTop quotes">
+                    <div class="offset-md-2 col-md-4 marginTop quotesAm">
                         <img class="borders" src="img\amenitiest2\icons8-wine-glass-50.png">
                         <span class="textCap">Bar Area</span>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="offset-md-2 col-md-4 marginTop quotes">
+                    <div class="offset-md-2 col-md-4 marginTop quotesAm">
                         <img class="borders" src="img\amenitiest2\icons8-wi-fi-logo-50.png">
                         <span class="textCap">WiFi</span>
                     </div>
-                    <div class="offset-md-2 col-md-4 marginTop quotes">
+                    <div class="offset-md-2 col-md-4 marginTop quotesAm">
                         <img class="borders" src="img\amenitiest2\icons8-corgi-50.png">
                         <span class="textCap">Pet Friendly</span>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="offset-md-2 col-md-4 marginTop quotes">
+                    <div class="offset-md-2 col-md-4 marginTop quotesAm">
                         <img class="borders" src="img\amenitiest2\icons8-garage-50.png">
                         <span class="textCap">Free Parking</span>
                     </div>
-                    <div class="offset-md-2 col-md-4 marginTop quotes">
+                    <div class="offset-md-2 col-md-4 marginTop quotesAm">
                         <img class="borders" src="img\amenitiest2\icons8-air-conditioner-50.png">
                         <span class="textCap">Heating and AC</span>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="offset-md-2 col-md-4 marginTop quotes">
+                    <div class="offset-md-2 col-md-4 marginTop quotesAm">
                         <img class="borders" src="img\amenitiest2\icons8-tv-50.png">
                         <span class="textCap">HD TVs</span>
                     </div>
-                    <div class="offset-md-2 col-md-4 marginTop quotes">
+                    <div class="offset-md-2 col-md-4 marginTop quotesAm">
                         <img class="borders" src="img\amenitiest2\icons8-grill-50.png">
                         <span class="textCap">Patio with Gas Grill</span>
                     </div>
@@ -296,7 +149,7 @@
                     </div>
                 </div>
 
-                <div class="row quotes">
+                <div class="row quotesAm">
                     <div class="offset-md-2 col-md-4 marginTop">
                         <img class="borders" src="img\amenitiest2\icons8-dishwasher-50.png">
                         <span class="textCap">Dishwasher</span>
@@ -307,7 +160,7 @@
                     </div>
                 </div>
 
-                <div class="row quotes">
+                <div class="row quotesAm">
                     <div class="offset-md-2 col-md-4 marginTop">
                         <img class="borders" src="img\amenitiest2\icons8-fridge-50.png">
                         <span class="textCap">Two Refrigerators</span>
@@ -322,7 +175,7 @@
 
             <div class="container">
 
-                <div class="row quotes">
+                <div class="row quotesAm">
                     <div class="offset-md-2 col-md-4 marginTop">
                         <img class="borders" src="img\amenitiest2\icons8-toilet-bowl-50.png">
                         <span class="textCap">Two Bathrooms</span>
@@ -333,7 +186,7 @@
                     </div>
                 </div>
 
-                <div class="row quotes">
+                <div class="row quotesAm">
                     <div class="offset-md-2 col-md-4 marginTop">
                         <img class="borders" src="img\amenitiest2\icons8-dispenser-50.png">
                         <span class="textCap">Shampoo</span>
@@ -344,7 +197,7 @@
                     </div>
                 </div>
 
-                <div class="row quotes">
+                <div class="row quotesAm">
                     <div class="offset-md-2 col-md-4 marginTop">
                         <img class="borders" src="img\amenitiest2\icons8-toilet-paper-50.png">
                         <span class="textCap">Toilet Paper</span>
