--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Eagle Creek Lodge</title>
+  <title>Eagle Creek Lodge</title><link rel="stylesheet" href="css/styleCustom.css">
   <link rel="icon" href="img/favicon.png" type="image/png">
 
   <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
@@ -15,156 +15,12 @@
   <link rel="stylesheet" href="vendors/owl-carousel/owl.theme.default.min.css">
   <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
   <link href="js/lightbox2/dist/css/lightbox.min.css" rel="stylesheet">
-
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styleCustom.css">
   <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <script src='https://www.google.com/recaptcha/api.js'></script>
 
-  <style>
-    html,
-    body {
-      overflow-x: hidden;
-    }
-
-    html {
-      overflow-y: scroll;
-    }
-
-    .navCustom {
-      background-color: #b59a77;
-
-    }
-
-    .bodyCustom {
-      background-color: #dbc4a6;
-      padding-top: 2em;
-    }
-
-    .fontCustom {
-      font-family: "Zilla Slab", serif !important;
-    }
-
-    .quotes {
-      font-family: "Zilla Slab", serif !important;
-      text-align: center;
-      font-size: 28px;
-      color: #000000;
-      padding-top: 2em;
-      padding-bottom: 2em;
-    }
-
-    .left {
-      text-align: left;
-    }
-
-    .right {
-      text-align: right;
-    }
-
-    .center {
-      text-align: center;
-    }
-
-    .pad-right1 {
-      padding-right: 4em;
-    }
-
-    .brown1 {
-      color: #4c3216;
-    }
-
-    .titleA {
-      font-size: 32px;
-    }
-
-    .quotesMod {
-      font-family: "Zilla Slab", serif !important;
-      text-align: center;
-      font-size: 28px;
-      color: #000000;
-      padding-top: 2em;
-      /*padding-bottom: 2em;*/
-    }
-
-    .spacer {
-      padding-top: 3em;
-    }
-
-    .padded {
-      padding: 1em;
-    }
-
-    .spacing {
-      /*    margin-right: 0.5em;
-    margin-left: 0.5em;*/
-      margin-top: 1em;
-      margin-bottom: 1em;
-    }
-
-    /*.thumbnail{
-    display:block;
-    max-width:100%;
-    height:auto;
-    margin-right:auto;
-    margin-left:auto;
-  }*/
-    .nails img {
-      display: block;
-      max-width: 100%;
-      height: auto;
-      margin-right: auto;
-      margin-left: auto;
-
-    }
-
-    .container {
-      width: 100%;
-    }
-
-    @media (max-width: 991px) {
-      nav.navbar {
-        background: lightgray !important;
-      }
-    }
-
-    #header_placeholder {
-      height: 70px;
-      width: 100%;
-      display: none;
-    }
-
-    .img-responsivex {
-      height: auto;
-      width: auto;
-      max-height: 77px;
-      max-width: 255px;
-    }
-    .captchaWrap {
-      padding-top: 2em;
-    }
-
-    .icon-size {
-      height: 13px;
-      width: 13px;
-    }
-
-    .image_off,
-    #home:hover .image_on {
-      display: none
-    }
-
-    .image_on,
-    #home:hover .image_off {
-      display: block
-    }
-
-    .footer-icon{
-      height: 16px;
-      width: 16px;
-    }
-
-  </style>
 </head>
 
 <body>
@@ -172,7 +28,7 @@
   <header class="header_area navCustom">
     <div class="main_menu">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container box_1620">
+        <div class="container containerW box_1620">
           <!-- Brand and toggle get grouped for better mobile display -->
           <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt="logo"
               class="img-responsivex"></a>
@@ -219,7 +75,7 @@
 
   <main class="site-main bodyCustom">
 
-      <div class="container">
+      <div class="container containerW">
         <div class="row">
           <div class="col-lg-12">
             <div class="quotes">
@@ -229,7 +85,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container containerW">
         <div class="row">
           <div class="col-lg-3 offset-md-1 img-thumbnail padded nails spacing">
             <a href="img\newPictures\IMG_1505.jpg" data-title="Cabin #1" data-lightbox="600x">
@@ -268,7 +124,7 @@
 
           </div>
 
-          <div class="container">
+          <div class="container containerW">
             <div class="row">
               <div class="col-lg-3 offset-md-1 img-thumbnail padded nails spacing">
                 <a href="img\newPictures\IMG_1518.jpg" data-title="Cabin #1" data-lightbox="600x">
@@ -307,7 +163,7 @@
 
               </div>
 
-              <div class="container">
+              <div class="container containerW">
                 <div class="row">
                   <div class="col-lg-3 offset-md-1 img-thumbnail padded nails spacing">
                     <a href="img\newPictures\IMG_1543.jpg" data-title="Cabin #1" data-lightbox="600x">
@@ -347,7 +203,7 @@
                   </div>
 
 
-                  <div class="container">
+                  <div class="container containerW">
                     <div class="row">
                       <div class="col-lg-3 offset-md-1 img-thumbnail padded nails spacing">
                         <a href="img\newPictures\IMG_1550.jpg" data-title="Cabin #1" data-lightbox="600x">
@@ -390,7 +246,7 @@
                     </div>
                   </div>
 
-                  <div class="container">
+                  <div class="container containerW">
                     <div class="row">
                       <div class="col-lg-3 offset-md-1 img-thumbnail padded nails spacing">
 
@@ -433,7 +289,7 @@
 
                     </div>
                   </div>
-                  <div class="container">
+                  <div class="container containerW">
                     <div class="row">
                       <div class="col-lg-3 offset-md-1 img-thumbnail padded nails spacing">
 
@@ -475,7 +331,7 @@
                       </div>
 
                     </div>
-                    <div class="container">
+                    <div class="container containerW">
                       <div class="row">
                         <div class="col-lg-3 offset-md-1 img-thumbnail padded nails spacing">
 
@@ -517,7 +373,7 @@
                         </div>
 
                       </div>
-                      <div class="container">
+                      <div class="container containerW">
                         <div class="row">
                           <div class="col-lg-3 offset-md-1 img-thumbnail padded nails spacing">
 
@@ -561,7 +417,7 @@
 
 
                   <!-- OGOG-->
-                  <div class="container">
+                  <div class="container containerW">
                     <div class="row">
                       <div class="col-lg-3 offset-md-1 img-thumbnail padded nails spacing">
                         <a href="img/frontCar/cabinFront1.jpg" data-title="Cabin #1" data-lightbox="600x">
@@ -604,7 +460,7 @@
                     </div>
                   </div>
 
-                  <div class="container">
+                  <div class="container containerW">
                     <div class="row">
                       <div class="col-lg-3 offset-md-1 img-thumbnail padded nails spacing">
 
@@ -655,7 +511,7 @@
 
   <!--================ Start Footer Area =================-->
   <footer class="footer-area section-padding">
-    <div class="container">
+    <div class="container containerW">
       <div class="row">
         <div class="col-lg-5  col-md-6 col-sm-6 left">
           <div class="single-footer-widget">
@@ -731,7 +587,7 @@
       document.getElementById("button1").disabled = true;
     });
     </script>
-  
+
     <script>
       function enableBtn(){
         document.getElementById("button1").disabled = false;
