--- a/about.html
+++ b/about.html
@@ -15,138 +15,11 @@
   <link rel="stylesheet" href="vendors/owl-carousel/owl.theme.default.min.css">
   <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
   <link rel="stylesheet" href="css/normalize.css">
-
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styleCustom.css">
   <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
   <script src='https://www.google.com/recaptcha/api.js'></script>
 
-  <style>
-    html,
-    body {
-      overflow-x: hidden;
-    }
-
-    html {
-      overflow-y: scroll;
-    }
-
-    .navCustom {
-      background-color: #b59a77;
-
-    }
-
-    .bodyCustom {
-      background-color: #dbc4a6;
-      padding-top: 2em;
-    }
-
-    .fontCustom {
-      font-family: "Zilla Slab", serif !important;
-    }
-
-    .quotes {
-      font-family: "Zilla Slab", serif !important;
-      text-align: center;
-      font-size: 28px;
-      color: #000000;
-      padding-top: 2em;
-      padding-bottom: 2em;
-    }
-
-    .left {
-      text-align: left;
-    }
-
-    .right {
-      text-align: right;
-    }
-
-    .center {
-      text-align: center;
-    }
-
-    .pad-right1 {
-      padding-right: 4em;
-    }
-
-    .brown1 {
-      color: #4c3216;
-    }
-
-    @media (max-width: 991px) {
-      nav.navbar {
-        background: lightgray !important;
-      }
-    }
-
-    .black1 {
-      color: black;
-    }
-
-    img {
-      width: 100%;
-      height: 100%;
-    }
-
-    .pad-bottom1 {
-      padding-bottom: 2em;
-    }
-
-    #header_placeholder {
-      height: 70px;
-      width: 100%;
-      display: none;
-    }
-
-    .captchaWrap {
-      padding-top: 2em;
-    }
-
-    .rotateimg180 {
-      -webkit-transform: rotate(180deg);
-      -moz-transform: rotate(180deg);
-      -ms-transform: rotate(180deg);
-      -o-transform: rotate(180deg);
-      transform: rotate(180deg);
-    }
-
-    .aboutText {
-      font-size: 1.5em;
-    }
-
-    .marginBot {
-      margin-bottom: 5em;
-    }
-
-    .img-responsivex {
-      height: auto;
-      width: auto;
-      max-height: 77px;
-      max-width: 255px;
-    }
-
-    .icon-size {
-      height: 13px;
-      width: 13px;
-    }
-
-    .image_off,
-    #home:hover .image_on {
-      display: none
-    }
-
-    .image_on,
-    #home:hover .image_off {
-      display: block
-    }
-
-    .footer-icon{
-      height: 16px;
-      width: 16px;
-    }
-
-
-  </style>
 </head>
 
 <body>
@@ -212,7 +85,7 @@
 
       <div class="row marginBot">
         <div class="col-lg-6">
-          <img class="img-responsive" src="img/frontCar/people1.jpg" alt="About1">
+          <img class="img-responsive imgFix" src="img/frontCar/people1.jpg" alt="About1">
         </div>
         <div class="col-lg-6">
           <p class="black1 aboutText">Eagle Creek Lodge is conveniently located in Port Matilda, Pennsylvania, just 12
@@ -243,7 +116,7 @@
 
       <div class="row pad-bottom1">
         <div class="col-lg-12">
-          <img class="img-responsive" src="img\newPictures\IMG_1589.jpg" alt="About1">
+          <img class="img-responsive imgFix" src="img\newPictures\IMG_1589.jpg" alt="About1">
         </div>
       </div>
 
@@ -259,7 +132,7 @@
           </p>
         </div>
         <div class="col-lg-6 aboutText">
-          <img class="img-responsive" src="img\newPictures\IMG_1514.jpg" alt="About1">
+          <img class="img-responsive imgFix" src="img\newPictures\IMG_1514.jpg" alt="About1">
         </div>
       </div>
     </div>
