--- a/calendar.html
+++ b/calendar.html
@@ -16,103 +16,11 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link href='fullcalendar/core/main.css' rel='stylesheet'/>
   <link href='fullcalendar/daygrid/main.css' rel='stylesheet'/>
-
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styleCustom.css">
   <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
   <script src='https://www.google.com/recaptcha/api.js'></script>
 
-<style>
-  html,body{overflow-x: hidden;}
-  html { overflow-y: scroll; }
-
-  .navCustom{
-    background-color: #b59a77;
-
-  }
-  .bodyCustom{
-    background-color: #dbc4a6;
-    padding-top: 2em;
-  }
-  .fontCustom{
-    font-family: "Zilla Slab",serif!important;
-  }
-  .quotes{
-    font-family: "Zilla Slab",serif!important;
-    text-align: center;
-    font-size: 28px;
-    color: #000000;
-    padding-top: 2em;
-    padding-bottom: 2em;
-  }
-  .left{
-    text-align: left;
-  }
-  .right{
-    text-align: right;
-  }
-  .center{
-    text-align: center;
-  }
-  .pad-right1{
-    padding-right: 4em;
-  }
-  .brown1{
-    color: #4c3216;
-  }
-  .inline{
-    display: inline-block;
-  }
-  .padBottom{
-    padding-bottom: 2em;
-  }
-  @media (max-width: 991px) {
-    nav.navbar {
-      background: lightgray !important;
-    }
-  }
-  #header_placeholder {
-    height:70px;
-    width:100%;
-    display:none;
-}
-#calendar {
-  margin: 40px auto;
-  background-color: #ffffff;
-  border: 1em solid #FFFFFF;
-  border-radius: 1em;
-  padding: 1.5em;
-}
-
-    .img-responsivex {
-      height: auto;
-      width: auto;
-      max-height: 77px;
-      max-width: 255px;
-    }
-.captchaWrap{
-  padding-top: 2em;
-}
-
-.icon-size {
-      height: 13px;
-      width: 13px;
-    }
-
-    .image_off,
-    #home:hover .image_on {
-      display: none
-    }
-
-    .image_on,
-    #home:hover .image_off {
-      display: block
-    }
-
-    .footer-icon{
-      height: 16px;
-      width: 16px;
-    }
-  </style>
 </head>
 
 <body>
