--- a/localActivities.html
+++ b/localActivities.html
@@ -17,141 +17,9 @@
   <link rel="stylesheet" href="css/normalize.css">
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css\styleSteph.css">
   <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
   <script src='https://www.google.com/recaptcha/api.js'></script>
-
-
-  <style>
-    html,
-    body {
-      overflow-x: hidden;
-    }
-
-    html {
-      overflow-y: scroll;
-    }
-
-    .navCustom {
-      background-color: #b59a77;
-
-    }
-
-    .bodyCustom {
-      background-color: #dbc4a6;
-      padding-top: 2em;
-    }
-
-    .fontCustom {
-      font-family: "Zilla Slab", serif !important;
-    }
-
-    .quotes {
-      font-family: "Zilla Slab", serif !important;
-      text-align: center;
-      font-size: 28px;
-      color: #000000;
-      padding-top: 2em;
-      padding-bottom: 2em;
-    }
-
-    .left {
-      text-align: left;
-    }
-
-    .right {
-      text-align: right;
-    }
-
-    .center {
-      text-align: center;
-    }
-
-    .pad-right1 {
-      padding-right: 4em;
-    }
-
-    .brown1 {
-      color: #4c3216;
-    }
-
-    @media (max-width: 991px) {
-      nav.navbar {
-        background: lightgray !important;
-      }
-    }
-
-    #header_placeholder {
-      height: 70px;
-      width: 100%;
-      display: none;
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-
-    .nails img {
-      display: block;
-      max-width: 100%;
-      height: auto;
-      margin-right: auto;
-      margin-left: auto;
-
-    }
-
-    .padBot {
-      padding-bottom: 5em;
-    }
-
-    .pad1 {
-      padding: 1em;
-    }
-
-    .margin-bot {
-      margin-bottom: 3em;
-    }
-
-    .img-responsivex {
-      height: auto;
-      width: auto;
-      max-height: 77px;
-      max-width: 255px;
-    }
-
-    .margin-card {
-      margin-bottom: 1em;
-    }
-
-    .pic-individual {
-      padding-bottom: 2em;
-      width: 639px;
-    }
-
-    .captchaWrap {
-      padding-top: 2em;
-    }
-
-    .icon-size {
-      height: 13px;
-      width: 13px;
-    }
-
-    .image_off,
-    #home:hover .image_on {
-      display: none
-    }
-
-    .image_on,
-    #home:hover .image_off {
-      display: block
-    }
-
-    .footer-icon{
-      height: 16px;
-      width: 16px;
-    }
-  </style>
 
 
 </head>
