--- a/testimonials.html
+++ b/testimonials.html
@@ -17,147 +17,10 @@
     <link rel="stylesheet" href="css/normalize.css">
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css\styleSteph.css">
     <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
     <script src='https://www.google.com/recaptcha/api.js'></script>
-
-
-    <style>
-        html,
-        body {
-            overflow-x: hidden;
-        }
-
-        html {
-            overflow-y: scroll;
-        }
-
-        .navCustom {
-            background-color: #b59a77;
-
-        }
-
-        .bodyCustom {
-            background-color: #dbc4a6;
-            padding-top: 2em;
-        }
-
-        .fontCustom {
-            font-family: "Zilla Slab", serif !important;
-        }
-
-        .quotes {
-            font-family: "Zilla Slab", serif !important;
-            text-align: center;
-            font-size: 28px;
-            color: #000000;
-            padding-top: 2em;
-            padding-bottom: 2em;
-        }
-
-        .left {
-            text-align: left;
-        }
-
-        .right {
-            text-align: right;
-        }
-
-        .center {
-            text-align: center;
-        }
-
-        .pad-right1 {
-            padding-right: 4em;
-        }
-
-        .brown1 {
-            color: #4c3216;
-        }
-
-        @media (max-width: 991px) {
-            nav.navbar {
-                background: lightgray !important;
-            }
-        }
-
-        .black1 {
-            color: black;
-        }
-
-        img {
-            width: 100%;
-            height: 100%;
-        }
-
-        .pad-bottom1 {
-            padding-bottom: 8em;
-        }
-
-        #header_placeholder {
-            height: 70px;
-            width: 100%;
-            display: none;
-        }
-
-        .cursive {
-            font-family: 'Courgette', cursive;
-            font-size: 24px;
-            color: #3a3c4e;
-        }
-
-        .name {
-            text-align: right;
-        }
-
-        hr.style-five {
-            border: 0;
-            height: 0;
-            /* Firefox... */
-            box-shadow: 0 0 10px 1px black;
-        }
-
-        hr.style-five:after {
-            /* Not really supposed to work, but does */
-            content: "\00a0";
-            /* Prevent margin collapse */
-        }
-
-        .img-responsivex {
-            height: auto;
-            width: auto;
-            max-height: 77px;
-            max-width: 255px;
-        }
-
-        .captchaWrap {
-            padding-top: 2em;
-        }
-
-        .testTitle {
-            color: #000000;
-        }
-
-        .icon-size {
-            height: 13px;
-            width: 13px;
-        }
-
-        .image_off,
-        #home:hover .image_on {
-            display: none
-        }
-
-        .image_on,
-        #home:hover .image_off {
-            display: block
-        }
-
-        .footer-icon {
-            height: 16px;
-            width: 16px;
-        }
-    </style>
 </head>
 
 <body>
