--- a/weddings.html
+++ b/weddings.html
@@ -18,61 +18,11 @@
   <link rel="stylesheet" href="css/normalize.css">
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css\styleSteph.css">
   <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
   <script src='https://www.google.com/recaptcha/api.js'></script>
 
   <style>
-    html,
-    body {
-      overflow-x: hidden;
-    }
-
-    html {
-      overflow-y: scroll;
-    }
-
-    .navCustom {
-      background-color: #b59a77;
-
-    }
-
-    .bodyCustom {
-      background-color: #dbc4a6;
-      /*padding-top: 2em;*/
-    }
-
-    .fontCustom {
-      font-family: "Zilla Slab", serif !important;
-    }
-
-    .quotes {
-      font-family: "Zilla Slab", serif !important;
-      text-align: center;
-      font-size: 28px;
-      color: #000000;
-      padding-top: 2em;
-      padding-bottom: 2em;
-    }
-
-    .left {
-      text-align: left;
-    }
-
-    .right {
-      text-align: right;
-    }
-
-    .center {
-      text-align: center;
-    }
-
-    .pad-right1 {
-      padding-right: 4em;
-    }
-
-    .brown1 {
-      color: #4c3216;
-    }
 
     .jumbotron {
       color: white;
@@ -83,128 +33,7 @@
       height: 100vh;
     }
 
-    .quotesx {
-      font-family: "Zilla Slab", serif !important;
-      /*text-align: center;*/
-      font-size: 42px;
-      color: #FFFFFF;
-      /*padding-top: 2em;*/
-      padding-bottom: 0.5em;
-      text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-    }
 
-    .quotesxy {
-      font-family: "Zilla Slab", serif !important;
-      /*text-align: center;*/
-      font-size: 40px;
-      color: #FFFFFF;
-      /*padding-top: 2em;
-    padding-bottom: 2em;*/
-      text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-    }
-
-    .hColor {
-      color: #000000;
-    }
-
-    .pColor {
-      color: #3A414E;
-    }
-
-    .titleA {
-      font-size: 32px;
-    }
-
-    .quotesMod {
-      font-family: "Zilla Slab", serif !important;
-      text-align: center;
-      font-size: 28px;
-      color: #000000;
-      padding-top: 2em;
-      /*padding-bottom: 2em;*/
-    }
-
-    .spacer {
-      padding-top: 3em;
-    }
-
-    .padded {
-      padding: 1em;
-    }
-
-    .spacing {
-      /*    margin-right: 0.5em;
-    margin-left: 0.5em;*/
-      margin-top: 1em;
-      margin-bottom: 1em;
-    }
-
-    /*.thumbnail{
-    display:block;
-    max-width:100%;
-    height:auto;
-    margin-right:auto;
-    margin-left:auto;
-  }*/
-    .pic {
-      padding-bottom: 1em;
-    }
-
-    .pic img {
-      display: block;
-      max-width: 100%;
-      height: auto;
-      margin-right: auto;
-      margin-left: auto;
-
-    }
-
-    .container {
-      width: 100%;
-    }
-
-    @media (max-width: 991px) {
-      nav.navbar {
-        background: lightgray !important;
-      }
-    }
-
-    #header_placeholder {
-      height: 70px;
-      width: 100%;
-      display: none;
-    }
-
-    .img-responsivex {
-      height: auto;
-      width: auto;
-      max-height: 77px;
-      max-width: 255px;
-    }
-
-    .captchaWrap {
-      padding-top: 2em;
-    }
-
-    .icon-size {
-      height: 13px;
-      width: 13px;
-    }
-
-    .image_off,
-    #home:hover .image_on {
-      display: none
-    }
-
-    .image_on,
-    #home:hover .image_off {
-      display: block
-    }
-
-    .footer-icon{
-      height: 16px;
-      width: 16px;
-    }
   </style>
 </head>
 
@@ -258,7 +87,7 @@
   </header>
   <!--================Header Menu Area =================-->
 
-  <main class="site-main bodyCustom">
+  <main class="site-main bodyCustomW">
 
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
