css stuff pt. 3

--- a/testimonials.html
+++ b/testimonials.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/normalize.css">
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css\styleSteph.css">
+  <link rel="stylesheet" href="css/styleCustom.css">
     <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
     <script src='https://www.google.com/recaptcha/api.js'></script>
