--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
 
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="css\styleSteph.css">
+  <link rel="stylesheet" href="css/styleCustom.css">
   <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <script src='https://www.google.com/recaptcha/api.js'></script>
